
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int (* zwopensection_TYPE ) (int ,int ,int ) ;
typedef int * HINSTANCE ;


 scalar_t__ GetProcAddress (int *,char*) ;
 int * LoadLibrary (char*) ;
 int MY_NULL ;

int main(int argc, char *argv[]) {
HINSTANCE dll;
zwopensection_TYPE my_ZwOpenSection;

  if ((dll=LoadLibrary("ntdll.dll"))!=((void*)0)) {

    if ((my_ZwOpenSection=(zwopensection_TYPE)GetProcAddress(dll,"ZwOpenSection"))!=((void*)0)) {

        my_ZwOpenSection(MY_NULL,MY_NULL,MY_NULL);

    }
  }

}
